--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Mokhele Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="@mediaqueries.css">
 </head>
@@ -20,7 +20,9 @@
         </div>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Mokhele Ramonate</div>
+        <div class="logo">
+            <h1>Mo logo</h1>
+        </div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -38,12 +40,12 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/Mo-2-pic.png" alt="Mokhele Ramonate profile pic">
+            <img src="./assets/id.png" alt="Mokhele Ramonate profile pic">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm </p>
             <h1 class="title">Mokhele Ramonate</h1>
-            <p class="section__text__p2">Front End Developer </p>
+            <p class="section__text__p2">Jnr Front End Developer </p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/mo-resume.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./contact'">Contact Info</button>
@@ -276,6 +278,11 @@
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon">
                 <p><a href="mailto:mokhele054@gmail.com">mokhele054@gmail.com</a></p>
+            </div>
+
+            <div class="contact-info-container">
+                <img src="./assets/call.png" alt="cellphone" class="icon contact-icon email-icon">
+                <p><a href="tel:0814106305">081 410 6305</a></p>
             </div>
 
             <div class="contact-info-container">
