--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                     Designed and developed a fully responsive HTML & CSS email template for automated distribution. Ensured cross-client compatibility, optimised for various devices, and implemented best practices for accessibility and performance. 
                 </p><br>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/mokhele1ramonate/mo-automated-emailer'">
-                        Github
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://mokhele1ramonate.github.io/mo-automated-emailer/'">
+                        Live Demo
                     </button>
 
                     
@@ -129,12 +129,12 @@
                 <p>Designed and developed a fully responsive HTML & CSS Restaurant mock website. Ensured cross-client compatibility, optimised for various devices, and implemented best practices for accessibility and performance.</p> <br>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" 
-                    onclick="window.open('https://github.com/mokhele1ramonate/mo-weather-app')"
+                    onclick="window.open('https://github.com/mokhele1ramonate/youtube-clone')"
                     >
                         Github
                     </button>
 
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://mokhele1ramonate.github.io/mo-weather-app/'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://mokhele1ramonate.github.io/youtube-clone/'">
                         Live Demo
                     </button>
                 </div>
@@ -144,9 +144,9 @@
                     <img src="https://i.ibb.co/8YCGr5W/restaurant-test-site.webp" alt="Project 2" class="project-img">
                 </div>
                 <h2 class="experience-sub-title project-title">Restaurant site</h2>
-                <p>Designed and developed a fully responsive HTML & CSS Restaurant mock website. Ensured cross-client compatibility, optimised for various devices, and implemented best practices for accessibility and performance.</p> <br>
+                <p>Designed and developed a HTML & CSS restaurant mock website. Currently being optimized for cross-client compatibility and various devices.</p> <br>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://mokhele054.wixsite.com/pixelford'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://mokhele1ramonate.github.io/mo-restaurant/'">
                         Live Demo
                     </button>
                 </div>
