--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p class="section__text__p2">Jnr Front End Developer<br> Support Consultant<br> QA / Tester<br> Content Editor </p>
             
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/mo-resume4.pdf')">Download CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/final-mo-resume.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./contact'">Contact Info</button>
             </div>
             <div id="socials-container">
