--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         <nav>
             <div class="nav-links-container">
                 <ul class="nav-links">
-                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#">About Me</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
