1 March link change

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     A website built with Canva showcases a professionally appealing and user-friendly design. Using Canva's drag-and-drop interface, customizable layouts, and smooth navigation.
                 </p><br>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://kgokeloaccounting.com/ts'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://kgokeloaccounting.com'">
                         Live Demo
                     </button>
 
