--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/mr-ramonate-resume.docx')">Download CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./contact'">Contact Info</button>
+                <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='//www.linkedin.com/in/mokhele-ramonate-8576a71a3/'"
